--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -158,6 +158,7 @@ android {
             signingConfig signingConfigs.debug
             minifyEnabled enableProguardInReleaseBuilds
             proguardFiles getDefaultProguardFile("proguard-android.txt"), "proguard-rules.pro"
+            aaptOptions { cruncherEnabled = false }
         }
     }
 
