--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-navigation/native-stack": "^6.1.0",
     "react": "17.0.2",
     "react-native": "0.65.1",
+    "react-native-animated-splash-screen": "^2.0.5",
     "react-native-gesture-handler": "^1.10.3",
     "react-native-popup-dialog": "^0.18.3",
     "react-native-responsive-screen": "^1.4.2",
